--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,18 +15,8 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css">
     <title>Fashion Like</title>
-    <style>
-      .figura-rara {
-        width: 100%;
-        position: fixed;
-        bottom: 0;
-        z-index: -1;
-        background-color: darksalmon;
-        height: 100px;
-        clip-path: polygon(0% 40%, 100% 10%, 100% 100%, 0% 100%);
-      }
-    </style>
   </head>
   <body>
     <div id="root"></div>
